@@ -451,13 +451,13 @@ class OpenSpreadSheet(SpreadSheetDoc):
         self.f.write(const.progName + ' ' + const.version)
         self.f.write('</meta:generator>\n')
 	self.f.write('<meta:initial-creator>')
-	self.f.write(name)
+	self.f.write(self.name)
 	self.f.write('</meta:initial-creator>\n')
 	self.f.write('<meta:creation-date>')
 	self.f.write(self.time)
 	self.f.write('</meta:creation-date>\n')
 	self.f.write('<dc:creator>')
-	self.f.write(name)
+	self.f.write(self.name)
 	self.f.write('</dc:creator>\n')
 	self.f.write('<dc:date>')
 	self.f.write(self.time)
